--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,3 +1,8 @@
+:root {
+  --white: #ffffff;
+  --dark-bg: #101920;
+}
+
 // main colors
 $main-first-color: #7a0000;
 $main-second-color: #007d00;
@@ -9,9 +14,9 @@ $text-color: #333;
 $input-placeholder-color: #aaa;
 
 // fonts
-$font-family-base: 'Verdana', sans-serif;
+$font-family-base: 'Montserrat', sans-serif;
 $font-family-custom: 'Arial', sans-serif;
-$font-family-unique: 'Times New Roman', serif;
+$font-family-unique: 'Commerce Condensed SSi', sans-serif;
 
 // font-weight
 $font-weight-medium: 500;
@@ -27,3 +32,5 @@ $transition-base: all .3s ease 0s;
 //Bootstrap var
 $enable-shadows: true;
 $body-color: $text-color;
+
+$primary: #DC3224;
