--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -6,10 +6,18 @@
   -webkit-order: 2;
   flex-grow: 1;
   -webkit-flex-grow: 1;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: flex-start;
+  align-content: stretch;
+  align-items: stretch;
   width: 100%;
   min-width: 320px;
 }
 
+.section-main {
+  height: 100%;
+}
 .main-content {
   display: flex;
   flex-flow: column wrap;
