--- a/src/scss/partials/_utilits.scss
+++ b/src/scss/partials/_utilits.scss
@@ -133,13 +133,13 @@ form {
         max-width: 328px;
 
         .btn {
-          padding: 17px 16px;
+          padding: 11px 16px;
           font-size: 14px;
         }
       }
       .form-control {
-        width: calc(100% - 110px);
-        border-radius: 25px 0 0 25px;
+        width: 100%;
+        border-radius: 25px;
 
         &::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
           -webkit-appearance: none;
@@ -191,7 +191,7 @@ form {
         max-width: 110px;
         width: 100%;
         height: 36px;
-        margin: 12px 0 0 auto;
+        margin: 12px auto 0 auto;
       }
 
       &-button-pass {
@@ -467,7 +467,7 @@ form {
     }
   }
   &-content {
-    padding: 48px 0;
+    padding: 48px 15px;
     background: var(--dark-bg);
     border: 1px solid #40474d;
     border-radius: 24px;
@@ -500,9 +500,20 @@ form {
   }
 }
 
-@include media-breakpoint-up(sm) {
+@include media-breakpoint-up(md) {
   form {
     &.form {
+      &-phone {
+        .form-group {
+          .btn {
+            padding: 17px 16px;
+          }
+        }
+        .form-control {
+          width: calc(100% - 110px);
+          border-radius: 25px 0 0 25px;
+        }
+      }
       .form-input-button {
         position: absolute;
         height: 100%;
