--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   padding: 100px 0 50px;
 }
 .main-content {
@@ -54,7 +54,7 @@
   .main-content {
     &__pic {
       img {
-        width: 85%;
+        width: 93%;
       }
     }
   }
