--- a/src/scss/partials/_utilits.scss
+++ b/src/scss/partials/_utilits.scss
@@ -31,7 +31,7 @@
   width: 100%;
   min-height: 100%;
   overflow: hidden;
-  padding: 0;
+  padding: 40px 0 20px;
   position: relative;
 }
 
@@ -69,7 +69,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
   }
 }
 
@@ -78,7 +78,7 @@
   font-weight: $font-weight-normal;
 }
 
-.btn {
+/*.btn {
   padding: 17px 30px;
   position: relative;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 50%), $primary;
@@ -88,6 +88,27 @@
   overflow: hidden;
   color: #ffffff;
   font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none !important;
+  transition: $transition-base;
+
+
+
+  &:hover {
+    box-shadow: 0 0 0 2px #ffffff, 0 0 15px 0 $primary, 0 0 60px 0 $primary;
+    color: #ffffff;
+  }
+}*/
+
+.btn {
+  position: relative;
+  border-color: var(--white) !important;
+  padding: 16px 50px 15px;
+  outline: none !important;
+  overflow: hidden;
+  font-size: 22px;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
@@ -110,9 +131,17 @@
     transition: $transition-base;
   }
 
-  &:hover {
-    box-shadow: 0 0 0 2px #ffffff, 0 0 15px 0 $primary, 0 0 60px 0 $primary;
-    color: #ffffff;
+  &-primary {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 50%), $primary;
+    border: 3px solid var(--white);
+    border-radius: 100px;
+    color: var(--white);
+
+    &:hover, &:focus {
+      border-color: var(--white);
+      box-shadow: 0 0 20px 0 $primary, 0 0 80px 0 $primary;
+      color: var(--white);
+    }
   }
 }
 
@@ -190,7 +219,7 @@ form {
         display: block;
         max-width: 110px;
         width: 100%;
-        height: 36px;
+        height: 100%;
         margin: 12px auto 0 auto;
       }
 
@@ -389,8 +418,8 @@ form {
       align-content: center;
       align-items: center;
       padding: 0;
-      gap: 32px;
-      margin-bottom: 32px;
+      gap: 20px;
+      margin-bottom: 24px;
 
       li {
         .ui-tabs-anchor {
@@ -401,27 +430,11 @@ form {
           font-weight: 900;
           line-height: normal;
           text-transform: uppercase;
-
-          &::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            width: 100%;
-            height: 2px;
-            background: #707579;
-            transform: translateX(-50%);
-            transition: $transition-base;
-          }
         }
 
         &.ui-tabs-active {
           .ui-tabs-anchor {
             color: var(--white);
-
-            &::after {
-              width: 0;
-            }
           }
         }
       }
@@ -474,11 +487,12 @@ form {
   }
   .registration {
     &__title {
-      margin: 0 auto 32px;
+      margin: 0 auto 24px;
       color: #ffffff;
-      font-size: 26px;
+      font-size: 40px;
       font-weight: 900;
       text-align: center;
+      text-shadow: 0 0 6px $primary, 0 0 12px $primary, 0 0 23px $primary;
 
       &-text {
         color: $primary;
@@ -487,7 +501,6 @@ form {
     }
     #tabs {}
     &__text {
-      max-width: 330px;
       margin: 0 auto;
       color: #707579;
       font-size: 12px;
